# labPP

./: README.md  pyproject.toml  requirements.txt
Test/models/: test_collaborators.py  test_note.py  test_note_tag.py  test_tag.py  test_user.py
Test/resourses/: test_auth.py  test_notes.py  test_users.py
Test/utils/: test_exeption_wrapper.py
src/: __init__.py  app.py  main.py
src/migrations/versions/: c18de8a5149b_initial_migration.py
src/models/: __init__.py  collaborators.py  note.py  notetag.py  role.py  tag.py  user.py
src/resourses/: __init__.py  auth.py  notes.py  tags.py  users.py
