[tool.poetry]
name = "labpp"
version = "0.1.0"
description = ""
authors = ["MarthaOliinyk <olinykmarta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
undecorated = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

